--- a/Java_Events_Platform/Java_Events_Platform/src/main/resources/application.properties
+++ b/Java_Events_Platform/Java_Events_Platform/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=Java_Events_Platform
 spring.profiles.active=dev
+
+# Swagger properties
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
