fix: add server address and port to app properties

--- a/Java_Events_Platform/Java_Events_Platform/src/main/resources/application.properties
+++ b/Java_Events_Platform/Java_Events_Platform/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=Java_Events_Platform
 spring.profiles.active=dev
+server.address=0.0.0.0
+server.port=8080
 
 # Swagger properties
 springdoc.api-docs.path=/api-docs
