--- a/Java_Events_Platform/Java_Events_Platform/src/main/resources/application.properties
+++ b/Java_Events_Platform/Java_Events_Platform/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Java_Events_Platform
 spring.profiles.active=dev
+//test
 
 # Swagger properties
 springdoc.api-docs.path=/api-docs
